# cppocrlite

./: .gitignore  CMakeLists.txt  README.md  build.sh  cppocrlite.pc.in
examples/: CMakeLists.txt  main.cpp
examples/detect_file/: CMakeLists.txt  main.cpp
examples/detect_memory/: CMakeLists.txt  main.cpp
include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrLiteCaller.h  OcrStruct.h  OcrUtils.h  angle_net.hpp  crnn_net.hpp  db_net.hpp  ocr_session.hpp  ocr_struct.hpp  ocr_utils.hpp  ocrlite.hpp  ocrlite_caller.hpp
script/: prepare_centos.sh  prepare_ubuntu.sh
src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrLiteCaller.cpp  OcrUtils.cpp  angle_net.cpp  angle_net.hpp  clipper.hpp  crnn_net.cpp  crnn_net.hpp  db_net.cpp  db_net.hpp  ocr_logger.cpp  ocr_logger.hpp  ocr_session.cpp  ocr_utils.cpp  ocr_utils.hpp  ocrlite.cpp  ocrlite_caller.cpp
